apps/n8n/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: apps-n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
        home-platform/analytics-collect: "true"
    spec:
      enableServiceLinks: false
      containers:
        - name: n8n
          image: ghcr.io/syroqt/home-platform/n8n:sha-ff70fd8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5678
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
          volumeMounts:
            - name: data
              mountPath: /home/node/.n8n
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n-data
