apps/n8n/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: apps-n8n
spec:
  selector:
    app: n8n
  ports:
    - name: http
      port: 80
      targetPort: 5678
